@@ -21,9 +21,6 @@ package org.apache.cayenne.access.translator.select;
 
 import org.apache.cayenne.access.sqlbuilder.sqltree.Node;
 import org.apache.cayenne.exp.Expression;
-import org.apache.cayenne.exp.parser.ASTDbPath;
-import org.apache.cayenne.exp.parser.ASTPath;
-import org.apache.cayenne.exp.path.CayennePath;
 
 /**
  * @since 4.2
@@ -33,8 +30,11 @@ class TableTreeQualifierStage implements TranslationStage {
     @Override
     public void perform(TranslatorContext context) {
         context.getTableTree().visit(node -> {
-            appendQualifier(context, node, node.getEntity().getQualifier());
-            appendQualifier(context, node, node.getAdditionalQualifier());
+            if(node.getRelationship() == null) {
+                // translate only root qualifier here, joined tables are processed in the `TableTreeStage`
+                appendQualifier(context, node, node.getEntity().getQualifier());
+                appendQualifier(context, node, node.getAdditionalQualifier());
+            }
         });
 
         if(context.getQualifierNode() != null) {
@@ -46,14 +46,7 @@ class TableTreeQualifierStage implements TranslationStage {
         if (dbQualifier == null) {
             return;
         }
-
-        CayennePath pathToRoot = node.getAttributePath();
-        dbQualifier = dbQualifier.transform(input ->
-                // here we are not only marking path as prefetch, but changing ObjPath to DB (without )
-                input instanceof ASTPath
-                        ? new ASTDbPath(pathToRoot.dot(((ASTPath) input).getPath()).withMarker(CayennePath.PREFETCH_MARKER))
-                        : input
-        );
+        dbQualifier = TableTreeStage.translateToDbPath(node, dbQualifier);
         Node translatedQualifier = context.getQualifierTranslator().translate(dbQualifier);
         context.appendQualifierNode(translatedQualifier);
     }
